--- a/package.json
+++ b/package.json
@@ -10,15 +10,24 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
+    "base-64": "^1.0.0",
     "expo": "~45.0.0",
+    "expo-constants": "^13.1.1",
     "expo-status-bar": "~1.3.0",
+    "firebase": "^9.8.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "metro-config": "^0.71.1"
   },
   "private": true
 }
