--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@fortawesome/react-fontawesome": "^0.1.18",
     "base-64": "^1.0.0",
     "expo": "~45.0.0",
+    "expo-barcode-scanner": "~11.3.0",
+    "expo-camera": "~12.2.0",
     "expo-constants": "^13.1.1",
     "expo-status-bar": "~1.3.0",
     "firebase": "^9.8.3",
